testsuite/tests/properties/invalid_new/missing_field.lkt
import common

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(a=12)
}
